--- a/bookshelf/templates/base.html
+++ b/bookshelf/templates/base.html
@@ -46,6 +46,9 @@
       </div>
     </div>
     <div class="container">
+      <p>Source code at <a href="https://github.com/Tomesco/bookshelf-demo-project">github.com/Tomesco/bookshelf-demo-project</a></p>
+    </div>
+    <div class="container">
       {% block content %}{% endblock %}
     </div>
     {{user}}
